# learn-rest-framework

./: .gitconfig  Dockerfile  README.md  pyproject.toml
api/: ownpermission.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
drfapi/: settings.py  urls.py
